fixed width on mobile

--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ section {
 
 @media screen and (max-width: 586px) {
     .main-heading {
-        font-size: 2.7em;
+        width: 75vw;
     }
 }
 
